with-ssl/kube/wordpress-tutorial/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress-tutorial # Match with namespace
  name: wordpress # MARK C
  labels:
    app: wordpress # MARK C
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress # MARK C
  template:
    metadata:
      labels:
        app: wordpress # MARK C
    spec:
      containers:
      - name: wordpress
        image: wordpress
        ports:
        - containerPort: 80 # MARK C.1
        volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www/html
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /wp-admin/install.php
            port: 80
          periodSeconds: 1
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 10
      restartPolicy: Always
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-storage
