with-ssl/kube/wordpress-tutorial/wordpress/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-tutorial # Match with namespace
spec:
  type: NodePort
  ports:
  - port: 80 # Port that allow nginx to communicate
    targetPort: 80 # Match with MARK C.1
    protocol: TCP
  selector:
    app: wordpress # Match with MARK C
