with-ssl/kube/wordpress-tutorial/wordpress/nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wordpress-ingress
  namespace: wordpress-tutorial # Change this
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
spec:
  tls:
    - hosts:
      - blog.codefactory.site # [TODO] Change this to your host
      secretName: blog-codefactory-site-tls # [TODO] Change this to anything
  rules:
  - host: blog.codefactory.site # [TODO] Change this to your host
    http:
      paths:
      - path: /*
        backend:
          serviceName: wordpress-service
          servicePort: 80
